# lv_sim_vscode_sdl

./: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h
main/src/: main.c
